; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ntb/test/extr_ntb_tool.c_tool_db_event_handler.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ntb/test/extr_ntb_tool.c_tool_db_event_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tool_ctx = type { i32, i32, i32 }

@.str = private unnamed_addr constant [38 x i8] c"db_event successful for db val=0x%jx\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @tool_db_event_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tool_db_event_handler(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.tool_ctx*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.tool_ctx*
  store %struct.tool_ctx* %6, %struct.tool_ctx** %3, align 8
  %7 = load %struct.tool_ctx*, %struct.tool_ctx** %3, align 8
  %8 = getelementptr inbounds %struct.tool_ctx, %struct.tool_ctx* %7, i32 0, i32 2
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @ntb_db_read(i32 %9)
  store i32 %10, i32* %4, align 4
  %11 = load i32, i32* %4, align 4
  %12 = load %struct.tool_ctx*, %struct.tool_ctx** %3, align 8
  %13 = getelementptr inbounds %struct.tool_ctx, %struct.tool_ctx* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = icmp eq i32 %11, %14
  br i1 %15, label %16, label %26

16:                                               ; preds = %1
  %17 = load %struct.tool_ctx*, %struct.tool_ctx** %3, align 8
  %18 = getelementptr inbounds %struct.tool_ctx, %struct.tool_ctx* %17, i32 0, i32 2
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.tool_ctx*, %struct.tool_ctx** %3, align 8
  %21 = getelementptr inbounds %struct.tool_ctx, %struct.tool_ctx* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @device_printf(i32 %19, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0), i32 %22)
  %24 = load %struct.tool_ctx*, %struct.tool_ctx** %3, align 8
  %25 = getelementptr inbounds %struct.tool_ctx, %struct.tool_ctx* %24, i32 0, i32 0
  store i32 0, i32* %25, align 4
  br label %31

26:                                               ; preds = %1
  %27 = load %struct.tool_ctx*, %struct.tool_ctx** %3, align 8
  %28 = getelementptr inbounds %struct.tool_ctx, %struct.tool_ctx* %27, i32 0, i32 1
  %29 = load %struct.tool_ctx*, %struct.tool_ctx** %3, align 8
  %30 = call i32 @callout_reset(i32* %28, i32 1, void (i8*)* @tool_db_event_handler, %struct.tool_ctx* %29)
  br label %31

31:                                               ; preds = %26, %16
  ret void
}

declare dso_local i32 @ntb_db_read(i32) #1

declare dso_local i32 @device_printf(i32, i8*, i32) #1

declare dso_local i32 @callout_reset(i32*, i32, void (i8*)*, %struct.tool_ctx*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
